# ising

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.md  README.md  movie.sh
benches/: ising.rs
examples/: ising.rs  movie.rs
src/: lib.rs  main.rs  padarray.rs  torus.rs
