[package]
name = "ising"
version = "0.1.0"
authors = ["SatoshiTeraaki <terasakisatoshi.math@gmail.com>"]

[dependencies]
ndarray = "0.11"
rand = "0.4"
sfmt = "0.2.1"
timeit = "0.1"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
